--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -146,6 +146,16 @@
                         data-disqus-identifier="{{ post.url }}" itemprop="commentCount"></span>
                 </a>
               </span>
+            {% elsif site.wildfire.enable %}
+              <span class="post-comments-count">
+                <span class="post-meta-divider">|</span>
+                <span class="post-meta-item-icon">
+                  <i class="fa fa-comment-o"></i>
+                </span>
+                <a href="{{ post.url | relative_url }}#comments" itemprop="discussionUrl">
+                  <span class="post-comments-count wf-count-unit" wf-page-url="{{ post.url | absolute_url }}" itemprop="commentCount"></span>
+                </a>
+              </span>
             {% elsif site.hypercomments_id %}
             <!--noindex-->
               <span class="post-comments-count">
@@ -344,7 +354,7 @@
         <div class="post-tags">
           {% for tag in post.tags %}
             {% assign tag_url_encode = tag | url_encode | replace: '+', '%20' %}
-            <a href="{{ '/tag/#/' | relative_url | append: tag_url_encode }}" rel="tag"><i class="fa fa-tag"></i> {{ tag }}</a>
+            <a href="{{ '/tag/#/' | relative_url | append: tag_url_encode }}" rel="tag"># {{ tag }}</a>
           {% endfor %}
         </div>
       {% endif %}
